fix login google

--- a/app/src/main/res/layout/danh_muc_fragment.xml
+++ b/app/src/main/res/layout/danh_muc_fragment.xml
@@ -6,6 +6,7 @@
     android:id="@+id/danhmuc"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <include layout="@layout/toolbarlayout"/>
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
