--- a/app/src/main/res/layout/toolbarlayout.xml
+++ b/app/src/main/res/layout/toolbarlayout.xml
@@ -37,7 +37,8 @@
         android:src="@drawable/qrcode"
         android:layout_alignParentRight="true"
         android:layout_marginRight="104dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:id="@+id/camerakit"/>
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
