thêm chức năng gps và định vị

--- a/app/src/main/res/layout/toolbarlayout.xml
+++ b/app/src/main/res/layout/toolbarlayout.xml
@@ -42,7 +42,7 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/iconapp"
+        android:src="@drawable/iconapplication"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"/>
 </RelativeLayout>
