--- a/app/src/main/res/layout/instagram_fragment.xml
+++ b/app/src/main/res/layout/instagram_fragment.xml
@@ -89,7 +89,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/iconapp" />
+                app:srcCompat="@drawable/iconapplication" />
 
             <ImageView
                 android:id="@+id/imageView4"
@@ -101,6 +101,18 @@
                 android:layout_marginRight="25dp"
                 app:srcCompat="@drawable/mc" />
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/iconabout" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 
