--- a/app/src/main/res/layout/adaptercuahang.xml
+++ b/app/src/main/res/layout/adaptercuahang.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/adaptercuahang">
-    <ImageView
-        android:id="@+id/imgHienThiCuaHang"
+    android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:src="@drawable/ic_image_black_24dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/txtTenCH"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="20dp">
+        <ImageView
+            android:id="@+id/imgHienThiCuaHang"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Tên CH" />
+            android:layout_height="160dp"
+            android:src="@drawable/ic_image_black_24dp"/>
 
-        <TextView
-            android:id="@+id/txtDiaChi"
+        <LinearLayout
+            android:layout_marginTop="160dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Địa chỉ" />
+            android:layout_height="80dp"
+            android:orientation="vertical"
+            android:background="#4CAF50">
 
-        <TextView
-            android:id="@+id/txtFB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Facebook" />
-    </LinearLayout>
+            <TextView
+                android:textColor="#fff"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/txtTenCH"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="Tên CH" />
+
+            <TextView
+                android:textColor="#fff"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/txtDiaChi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="Địa chỉ" />
+
+            <TextView
+                android:textColor="#fff"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/txtFB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="Facebook" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
