--- a/app/src/main/res/layout/activity_an_sang_activty.xml
+++ b/app/src/main/res/layout/activity_an_sang_activty.xml
@@ -6,40 +6,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/btnBacl2"
+        android:id="@+id/btnBacl23"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_arrow_back_black_24dp"/>
-    <androidx.cardview.widget.CardView
+    <TextView
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="50dp"
+        android:id="@+id/txtBanDo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp">
-        <EditText
-            android:textColor="#fff"
-            android:paddingLeft="15dp"
-            android:textColorHint="#fff"
-            android:background="#D81212"
-            android:id="@+id/editText2"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:inputType="textPersonName"
-            android:hint="Name" />
-    </androidx.cardview.widget.CardView>
-
-    <ImageView
-        android:layout_alignParentRight="true"
-        android:id="@+id/imageView5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/ic_search_black_24dp" />
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="4dp"
+        android:text="Ăn Sáng"
+        android:textColor="@color/color1"
+        android:textSize="30dp" />
 
     <ListView
-        android:id="@+id/lvTimKiem"
+        android:id="@+id/lvAnSang122"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
@@ -51,7 +36,7 @@
         android:orientation="vertical"
         android:gravity="center">
         <ProgressBar
-            android:id="@+id/progLoadMa"
+            android:id="@+id/progLoadMa144"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
