them fragmetn loc du lieu firebase

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#C51515</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="colorPrimary1">#C51515</color>
+
     <color name="color1">#F44336</color>
     <color name="color2">#009688</color>
     <color name="color3">#E91E63</color>
