--- a/app/src/main/res/layout/activity_about_account.xml
+++ b/app/src/main/res/layout/activity_about_account.xml
@@ -15,7 +15,7 @@
     <TextView
         android:textColor="@color/colorPrimaryDark"
         android:layout_marginTop="5dp"
-        android:id="@+id/textView2"
+        android:id="@+id/txtMCC2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Account"
