--- a/app/src/main/res/layout/activity_an_sang_activty.xml
+++ b/app/src/main/res/layout/activity_an_sang_activty.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
-        android:id="@+id/txtBanDo1"
+        android:id="@+id/txtAnSangAc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
