--- a/app/src/main/res/layout/activity_nhau.xml
+++ b/app/src/main/res/layout/activity_nhau.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_arrow_back_black_24dp"/>
     <TextView
-        android:id="@+id/txtBanDo"
+        android:id="@+id/txtNhau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
