--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:textColor="@color/colorAccent"
-        android:id="@+id/textView3"
+        android:id="@+id/txtDanhSachCuaHang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
