--- a/app/src/main/res/layout/toolbarlayout.xml
+++ b/app/src/main/res/layout/toolbarlayout.xml
@@ -23,7 +23,7 @@
 
     <TextView
         android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView"
+        android:id="@+id/txtMongCaiTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mong Cai Food"
