--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,8 +13,8 @@
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Thông Báo" />
+        android:icon="@drawable/ic_tv_black_24dp"
+        android:title="Khám Phá" />
     <item
         android:id="@+id/account_zalo"
         android:icon="@drawable/ic_person_black_24dp"
