--- a/app/src/main/res/layout/activity_camerakit.xml
+++ b/app/src/main/res/layout/activity_camerakit.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Camerakit">
+    tools:context=".Activity.Camerakit">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
