--- a/app/src/main/res/layout/adaptercuahang.xml
+++ b/app/src/main/res/layout/adaptercuahang.xml
@@ -14,7 +14,8 @@
             android:id="@+id/imgHienThiCuaHang"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:src="@drawable/ic_image_black_24dp"/>
+            android:src="@drawable/ic_image_black_24dp"
+            android:transitionName="@string/transition"/>
 
         <LinearLayout
             android:layout_marginTop="160dp"
