--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -32,6 +32,11 @@
         android:layout_marginTop="229dp"
         android:text="Danh Sách Cửa Hàng"
         android:textSize="30dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:transitionName="@string/transition"
+        android:orientation="vertical">
 
     <ListView
         android:id="@+id/lvDachSachCH"
@@ -40,8 +45,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="273dp" >
-
     </ListView>
+
+    </LinearLayout>
 
     <ProgressBar
         android:layout_margin="350dp"
