--- a/app/src/main/res/layout/layout_items_information_cuahang.xml
+++ b/app/src/main/res/layout/layout_items_information_cuahang.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="1dp">
+    android:layout_margin="1dp"
+    android:id="@+id/parent_layout">
     <androidx.cardview.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
