--- a/app/src/main/res/layout/thong_bao_fragment.xml
+++ b/app/src/main/res/layout/thong_bao_fragment.xml
@@ -1,24 +1,11 @@
 
-<com.google.android.material.appbar.AppBarLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabsdieuche"
+    <ListView
         android:layout_width="match_parent"
-        android:elevation="6dp"
-        android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        app:tabMode="scrollable"
-        android:background="@color/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Light" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white" />
-
-</com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/listdulich"/>
+</RelativeLayout>
