--- a/app/src/main/res/layout/activity_do_uong.xml
+++ b/app/src/main/res/layout/activity_do_uong.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundapplication">
     <ImageView
         android:id="@+id/btnBac8"
         android:layout_width="50dp"
