--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Trang Chủ" />
+        android:icon="@drawable/ic_home"
+        android:title=""
+        android:enabled="true"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Danh Mục" />
+        android:icon="@drawable/ic_menu"
+        android:title=""
+        android:enabled="true"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_tv_black_24dp"
-        android:title="Khám Phá" />
+        android:icon="@drawable/ic_discovery"
+        android:title=""
+        android:enabled="true"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/account_zalo"
-        android:icon="@drawable/ic_person_black_24dp"
-        android:title="Tài Khoản" />
+        android:icon="@drawable/ic_information"
+        android:title=""
+        android:enabled="true"
+        app:showAsAction="ifRoom"/>
 </menu>
