--- a/app/src/main/res/layout/activity_cho_mong_cai.xml
+++ b/app/src/main/res/layout/activity_cho_mong_cai.xml
@@ -25,7 +25,7 @@
         android:layout_margin="15dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_arrow_back_black_24dp"/>
+        android:src="@drawable/back"/>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
