--- a/app/src/main/res/layout/activity_do_uong.xml
+++ b/app/src/main/res/layout/activity_do_uong.xml
@@ -5,27 +5,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundapplication">
+    android:background="#DE668B">
     <ImageView
         android:id="@+id/btnBac8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_margin="15sp"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/ic_arrow_back_black_24dp"/>
+        android:src="@drawable/back"/>
     <TextView
         android:id="@+id/txtDoUong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="15dp"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:text="Đồ Uống"
-        android:textColor="@color/color8"
+        android:textColor="#fff"
         android:textSize="30dp" />
 
     <ListView
         android:id="@+id/lvDouong"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
