--- a/app/src/main/res/layout/activity_login_with_app.xml
+++ b/app/src/main/res/layout/activity_login_with_app.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splashscreen"
+    android:background="#FF8C94"
     android:orientation="vertical"
     tools:context=".LoginWithApp">
-
-
     <ImageView
+        android:layout_marginTop="65sp"
+        android:layout_alignParentTop="true"
         android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="50dp"
-        app:srcCompat="@drawable/iconcreate"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="53dp" />
+        android:src="@drawable/iconlogon"
+        android:layout_centerInParent="true"/>
+    <ImageView
+        android:id="@+id/linearLayout111"
+        android:layout_marginBottom="140sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/boxborder">
+    </ImageView>
+    <TextView
+        android:id="@+id/textMoiBan"
+        android:layout_marginBottom="270sp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mời Bạn Đăng Nhập"
+        android:textSize="20sp"
+        android:layout_centerInParent="true"/>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/btnLoginGoogle"
-        android:layout_width="355dp"
-        android:layout_height="61dp"
-        android:layout_gravity="center"
-        android:layout_margin="300dp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="537dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="200sp">
+    </com.google.android.gms.common.SignInButton>
 
 
-</LinearLayout>
+</RelativeLayout>
