--- a/app/src/main/res/layout/activity_map_chi_duong_mc.xml
+++ b/app/src/main/res/layout/activity_map_chi_duong_mc.xml
@@ -4,40 +4,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#7BD5F5">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="10sp"
             android:id="@+id/imgBack2"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_arrow_back_black_24dp" />
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/txtBanDo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="10dp"
             android:layout_centerInParent="true"
             android:layout_alignParentTop="true"
             android:text="Bản Đồ"
-            android:textColor="@color/color9"
+            android:textColor="#fff"
             android:textSize="30dp" />
 
         <ImageView
+            android:layout_margin="10sp"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="150dp"
             android:id="@+id/hdsd"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_import_contacts_black_24dp" />
+            android:src="@drawable/information666" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:paddingTop="50dp"
+        android:paddingTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
