--- a/app/src/main/res/layout/adapter_ansang.xml
+++ b/app/src/main/res/layout/adapter_ansang.xml
@@ -17,13 +17,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:src="@drawable/ic_image_black_24dp"/>
+            <ImageView
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="130dp"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:src="@drawable/shopmctitle"/>
             <TextView
-                android:layout_marginLeft="20dp"
+
                 android:id="@+id/txtTenCH12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="demo"
-                android:layout_alignParentTop="true"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="130dp"
                 android:textSize="20sp"
                 android:textColor="#FFFFFF"/>
@@ -36,25 +42,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:orientation="vertical"
-                android:background="#F44336">
+                android:background="#A7226E">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_marginLeft="10sp"
+                        android:layout_gravity="center"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:src="@drawable/navigation"/>
 
                 <TextView
                     android:textColor="#fff"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/txtDiaChi12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:text="Địa Chỉ" />
-
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_marginLeft="10sp"
+                        android:layout_gravity="center"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:src="@drawable/callphone"/>
                 <TextView
                     android:textColor="#fff"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/txtsdtGoi1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:text="SĐT" />
+                </LinearLayout>
 
                 <TextView
                     android:textColor="#fff"
