--- a/app/src/main/res/layout/adapter_douong.xml
+++ b/app/src/main/res/layout/adapter_douong.xml
@@ -17,13 +17,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:src="@drawable/ic_image_black_24dp"/>
+            <ImageView
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="130dp"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:src="@drawable/shopmctitle"/>
             <TextView
-                android:layout_marginLeft="20dp"
+
                 android:id="@+id/txtTenCH8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="demo"
-                android:layout_alignParentTop="true"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="130dp"
                 android:textSize="20sp"
                 android:textColor="#FFFFFF"/>
@@ -36,28 +42,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:orientation="vertical"
-                android:background="@color/color8">
+                android:background="#3C145F">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_marginLeft="10sp"
+                        android:layout_gravity="center"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:src="@drawable/navigation"/>
+
+                    <TextView
+                        android:textColor="#fff"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/txtDiaChi8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="Địa Chỉ" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_marginLeft="10sp"
+                        android:layout_gravity="center"
+                        android:layout_width="30sp"
+                        android:layout_height="30sp"
+                        android:src="@drawable/callphone"/>
+                    <TextView
+                        android:textColor="#fff"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/txtsdtGoi8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="SĐT" />
+                </LinearLayout>
 
                 <TextView
-                    android:textColor="#000"
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtDiaChi8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Địa Chỉ" />
-
-                <TextView
-                    android:textColor="#000"
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtsdtGoi8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="SĐT" />
-
-                <TextView
-                    android:textColor="#000"
+                    android:textColor="#fff"
                     android:layout_marginLeft="20dp"
                     android:id="@+id/txtFB8"
                     android:layout_width="match_parent"
