--- a/app/src/main/res/layout/adaptercomment.xml
+++ b/app/src/main/res/layout/adaptercomment.xml
@@ -14,40 +14,79 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imgAvatarComment1"
-            android:layout_margin="15dp"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/avataracount">
-        </ImageView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:cardMaxElevation="2dp"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="1dp">
+            <ImageView
+                android:id="@+id/imgAvatarComment1"
+                android:layout_margin="15dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/avataracount">
+            </ImageView>
+        </androidx.cardview.widget.CardView>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView
-                android:textColor="#000"
-                android:id="@+id/account_google_comment"
-                android:layout_marginTop="15dp"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="account">
-            </TextView>
-            <TextView
-                android:textColor="#000"
-                android:id="@+id/txtreview"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_marginTop="5sp"
+                    android:layout_marginLeft="5sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user"/>
+                <TextView
+                    android:layout_marginLeft="10sp"
+                    android:textColor="#000"
+                    android:layout_gravity="center"
+                    android:id="@+id/account_google_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="account"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_marginLeft="10sp"
+                    android:layout_gravity="center"
+                    android:textColor="#000"
+                    android:id="@+id/txtreview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Review"/>
+                <ImageView
+                    android:layout_marginTop="5sp"
+                    android:layout_marginLeft="5sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/star"/>
+
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Review">
-            </TextView>
-            <TextView
-                android:textColor="#000"
-                android:id="@+id/txtcommentguest"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Comment">
-            </TextView>
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_marginLeft="10sp"
+                    android:textColor="#000"
+                    android:id="@+id/txtcommentguest"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Comment">
+                </TextView>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
