--- a/app/src/main/res/layout/instagram_fragment.xml
+++ b/app/src/main/res/layout/instagram_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/backgroundapplication">
+    android:background="@drawable/hinhnen2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="About Developer"
-            android:textColor="#F44336"
+            android:textColor="#FFF"
             android:textSize="30dp" />
 
         <RelativeLayout
@@ -56,6 +56,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:textColor="#FFF"
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,6 +67,7 @@
                 android:text="Đỗ Văn Cảnh" />
 
             <TextView
+                android:textColor="#FFF"
                 android:gravity="center"
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
