--- a/app/src/main/res/layout/itemclick.xml
+++ b/app/src/main/res/layout/itemclick.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="20dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="8sp"
+    app:cardCornerRadius="20sp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="300dp">
+            android:layout_height="300sp">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_image_black_24dp"
                 android:id="@+id/imagemc"/>
 
             <TextView
+                android:layout_marginBottom="30sp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentBottom="true"
                 android:id="@+id/titlemc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imagemc"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="17dp"
-                android:layout_centerHorizontal="true"
                 android:text="Title"
-                android:textColor="#262626"
+                android:textColor="#fff"
                 android:textSize="20dp" />
         </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
