--- a/app/src/main/res/layout/toolbarlayout.xml
+++ b/app/src/main/res/layout/toolbarlayout.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:background="@color/colorPrimaryDark">
     <de.hdodenhof.circleimageview.CircleImageView
         android:src="@drawable/avataracount"
         android:id="@+id/btn_avatar"
@@ -16,33 +17,24 @@
         android:id="@+id/btnsearch"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_search"
+        android:src="@drawable/search"
         android:layout_alignParentRight="true"
         android:layout_marginRight="55dp"
         android:layout_marginTop="5dp"/>
 
-    <TextView
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/txtMongCaiTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mong Cai Food"
-        android:textSize="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="70dp"/>
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/qrcode"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="104dp"
+        android:layout_marginRight="110dp"
         android:layout_marginTop="5dp"
         android:id="@+id/camerakit"/>
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/iconapplication"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/iconhome"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"/>
 </RelativeLayout>
