--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F0F0F0</color>
-    <color name="colorPrimaryDark">#C51515</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#BB2F2F</color>
+    <color name="colorPrimaryDark">#FF8C94</color>
+    <color name="colorAccent">#FF8C94</color>
 
     <color name="colorPrimary1">#C51515</color>
 
-    <color name="color1">#F44336</color>
-    <color name="color2">#009688</color>
-    <color name="color3">#E91E63</color>
-    <color name="color4">#4CAF50</color>
-    <color name="color5">#9C27B0</color>
-    <color name="color6">#8BC34A</color>
+    <color name="color1">#A8E6CE</color>
+    <color name="color2">#FF8C94</color>
+    <color name="color3">#F8D241</color>
+    <color name="color4">#4830D4</color>
+    <color name="color5">#EF9F7B</color>
+    <color name="color6">#F8F043</color>
     <color name="color7">#3F51B5</color>
-    <color name="color8">#FFEB3B</color>
-    <color name="color9">#2196F3</color>
+    <color name="color8">#DE668B</color>
+    <color name="color9">#7BD5F5</color>
 
 </resources>
