--- a/app/src/main/res/layout/activity_an_toi.xml
+++ b/app/src/main/res/layout/activity_an_toi.xml
@@ -9,24 +9,24 @@
     <ImageView
         android:layout_margin="15sp"
         android:id="@+id/btnBac233"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/back"/>
     <TextView
         android:id="@+id/txtAnToi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:text="Ăn Tối"
         android:textColor="#fff"
-        android:textSize="30dp" />
+        android:textSize="25sp"/>
 
     <ListView
         android:id="@+id/lvAnTrua661"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
