--- a/app/src/main/res/layout/activity_about_account.xml
+++ b/app/src/main/res/layout/activity_about_account.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imgBACK"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
         app:srcCompat="@drawable/back"
         android:layout_margin="15sp"/>
 
