--- a/app/src/main/res/layout/activity_an_sang_activty.xml
+++ b/app/src/main/res/layout/activity_an_sang_activty.xml
@@ -9,26 +9,24 @@
     <ImageView
         android:layout_margin="15sp"
         android:id="@+id/btnBacl23"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/back"/>
     <TextView
-
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:id="@+id/txtAnSangAc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="Ăn Sáng"
         android:textColor="#fff"
-        android:textSize="30dp" />
+        android:textSize="25sp" />
 
     <ListView
         android:id="@+id/lvAnSang122"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
