--- a/app/src/main/res/layout/activity_camerakit.xml
+++ b/app/src/main/res/layout/activity_camerakit.xml
@@ -34,22 +34,21 @@
         android:id="@+id/info">
 
         <Button
+            android:layout_centerInParent="true"
             android:layout_alignParentLeft="true"
             android:id="@+id/btnclickchup"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#E21010"
+            android:background="@color/colorPrimaryDark"
             android:enabled="false"
             android:text="SCAN QR"
             android:textColor="#fff" />
         <ImageView
             android:layout_alignParentRight="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_centerInParent="true"
             android:id="@+id/clickReturn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_arrow_back_black_24dp" />
+            android:layout_width="25sp"
+            android:layout_height="25sp"
+            android:src="@drawable/ic_back" />
     </RelativeLayout>
 </RelativeLayout>
