--- a/app/src/main/res/layout/activity_cho_mong_cai.xml
+++ b/app/src/main/res/layout/activity_cho_mong_cai.xml
@@ -23,8 +23,8 @@
         android:layout_alignParentRight="true"
         android:id="@+id/btnBack12322"
         android:layout_margin="15dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="25sp"
+        android:layout_height="25sp"
         android:src="@drawable/back"/>
     <ProgressBar
         android:layout_width="wrap_content"
