--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/toolbarlayout"/>
 
     <FrameLayout
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
