--- a/app/src/main/res/layout/activity_map_chi_duong_mc.xml
+++ b/app/src/main/res/layout/activity_map_chi_duong_mc.xml
@@ -14,33 +14,32 @@
         <ImageView
             android:layout_margin="10sp"
             android:id="@+id/imgBack2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="25sp"
+            android:layout_height="25sp"
             android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/txtBanDo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="10sp"
             android:layout_centerInParent="true"
             android:layout_alignParentTop="true"
             android:text="Bản Đồ"
             android:textColor="#fff"
-            android:textSize="30dp" />
+            android:textSize="25sp" />
 
         <ImageView
             android:layout_margin="10sp"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="150dp"
             android:id="@+id/hdsd"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="25sp"
+            android:layout_height="25sp"
             android:src="@drawable/information666" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:paddingTop="70dp"
+        android:paddingTop="50sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
