--- a/app/src/main/res/layout/activity_nhau.xml
+++ b/app/src/main/res/layout/activity_nhau.xml
@@ -9,24 +9,24 @@
     <ImageView
         android:layout_margin="15sp"
         android:id="@+id/btnBac6"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="25sp"
+        android:layout_height="25sp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/back"/>
     <TextView
         android:id="@+id/txtNhau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10sp"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:text="Nhậu"
         android:textColor="#fff"
-        android:textSize="30dp" />
+        android:textSize="25sp" />
 
     <ListView
         android:id="@+id/lvNhau"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
