--- a/app/src/main/res/layout/activity_tk_application.xml
+++ b/app/src/main/res/layout/activity_tk_application.xml
@@ -9,17 +9,17 @@
     <ImageView
         android:layout_margin="10sp"
         android:id="@+id/btnBacl2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="25sp"
+        android:layout_height="25sp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/back"/>
+
     <SearchView
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="70dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/simpleSearchView">
-    </SearchView>
+        android:id="@+id/simpleSearchView"
+        android:layout_width="match_parent"
+        android:layout_height="25sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginTop="10sp"></SearchView>
     <TextView
 
         android:id="@+id/cmm"
@@ -32,7 +32,7 @@
 
     <ListView
         android:id="@+id/lvTimKiem"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
