--- a/app/src/main/res/layout/adapter_cua_hang_recycleview.xml
+++ b/app/src/main/res/layout/adapter_cua_hang_recycleview.xml
@@ -8,8 +8,9 @@
     <LinearLayout
         android:layout_gravity="center"
         android:layout_width="180dp"
-        android:layout_height="250dp"
-        android:orientation="vertical">
+        android:layout_height="190dp"
+        android:orientation="vertical"
+        android:background="#FFF">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,32 +31,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:layout_gravity="center"
                 android:layout_marginLeft="10sp"
-                android:layout_width="30sp"
-                android:layout_height="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/shop"/>
             <TextView
                 android:id="@+id/txtTenCuaHang"
                 android:layout_marginLeft="5sp"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="30sp"
+                android:layout_width="match_parent"
+                android:layout_height="20sp"
                 android:text="Tên Cửa Hàng"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:layout_gravity="center"
                 android:layout_marginLeft="10sp"
-                android:layout_width="30sp"
-                android:layout_height="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/location"/>
             <TextView
                 android:id="@+id/txtDiaChiCuaHang"
                 android:layout_marginLeft="5sp"
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="20sp"
                 android:text="Địa chỉ"/>
         </LinearLayout>
 
