--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -29,7 +29,7 @@
 
             <TextView
                 android:layout_gravity="center"
-                android:textColor="@color/colorAccent"
+                android:textColor="#A6612E"
                 android:id="@+id/txtDanhSachCuaHang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
