--- a/app/src/main/res/layout/instagram_fragment.xml
+++ b/app/src/main/res/layout/instagram_fragment.xml
@@ -102,7 +102,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="25dp"
-                app:srcCompat="@drawable/mc" />
+                app:srcCompat="@drawable/mcccccccc" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
